fix: remove scrollbar gutter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,6 @@
     padding: 0;
 }
 
-html {
-    scrollbar-gutter: stable both-edges;
-}
-
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
